Fix carousel arrows alignment

--- a/styles.css
+++ b/styles.css
@@ -173,11 +173,11 @@ h1 {
 }
 
 .carouselBtn--left {
-    left: -30px;
+    left: -44px;
 }
 
 .carouselBtn--right {
-    right: -10px;
+    right: -6px;
 }
 
 .carouselBtn p {
